--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Twisted==13.1.0
 beautifulsoup4==4.3.2
+gevent==1.0
+greenlet==0.4.1
+grequests==0.2.0
 nose==1.3.0
+redis==2.8.0
+requests==2.0.1
 wsgiref==0.1.2
-zope.interface==4.0.5
